--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,22 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'kotlin-android-extensions'
+    id 'com.google.gms.google-services'
 }
 
 android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.example.digiandroid"
-        minSdk 17
+            applicationId "com.example.digiandroid"
+        minSdk 19
         targetSdk 31
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -31,7 +35,10 @@ android {
 
     buildFeatures {
         viewBinding true
+        dataBinding true
     }
+
+
 
 }
 
@@ -43,7 +50,29 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     //smooth bottom actionbar
     implementation 'com.github.ibrahimsn98:SmoothBottomBar:1.7.9'
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0 '
+    //gson
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    //multidex
+    def multidex_version = "2.0.1"
+
+    implementation platform('com.google.firebase:firebase-bom:29.2.1')
+    implementation 'com.google.firebase:firebase-analytics'
+
+
+    //dagger
+    implementation 'com.google.dagger:dagger:2.41'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.41'
+
+    implementation "androidx.multidex:multidex:$multidex_version"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
+
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
